[gd_scene load_steps=4 format=3 uid="uid://8ismd05cuam3"]

[ext_resource type="Script" path="res://System/Entities/E_PlayerController.gd" id="1_k3b44"]
[ext_resource type="AudioStream" uid="uid://6m7h0tcrvaho" path="res://Assets/SoundFX/bruh.ogg" id="7_1dut2"]
[ext_resource type="PackedScene" uid="uid://b0lbndyk5245i" path="res://System/Entities/c_hp.tscn" id="8_c0cki"]

[node name="Entity" type="CharacterBody2D"]
script = ExtResource("1_k3b44")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
disabled = true

[node name="SoundHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1dut2")

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="C_HP" parent="." instance=ExtResource("8_c0cki")]

[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="entity_death" from="C_HP" to="." method="_on_c_hp_entity_death"]
[connection signal="hp_delta" from="C_HP" to="." method="_on_c_hp_hp_delta"]
